test_suite/tests/ui/fail/invalid_attr_value_for_command/invalid_command_usage.rs
use clapi::macros::*;

#[command(usage=123)]
fn app(){}

fn main(){}