test_suite/tests/ui/fail/invalid_attr_value_for_command/invalid_command_usage.stderr
error: custom attribute panicked
 --> $DIR/invalid_command_usage.rs:3:1
  |
3 | #[command(usage=123)]
  | ^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: `usage` must be a string literal
